[project]
name = "wikiapp"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "luciam11a", email = "134278698+luciam11a@users.noreply.github.com" },
]
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
test = ["coverage[toml]"]

[project_scripts]
wikiapp = "wikiapp.console:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wikiapp = { path = ".", editable = true }

[tool.pixi.tasks]
program = "python wikiapp/console.py"

[tool.pixi.dependencies]
click = ">=8.1.7,<8.2"
requests = ">=2.31.0,<2.32"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.0,<8.3"
pytest-cov = ">=5.0.0,<5.1"
pytest-mock = ">=3.14.0,<3.15"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
